Bug 1057858: ensure all frames for '<input type="number">' are created before choosing the nested element to be focused. r=smaug

- Avoids undesired bluring and focusing of '<input type="number">' and its nested elements.

- Add tests for two scenarios where this could occur.

Differential Revision: https://phabricator.services.mozilla.com/D27684

--HG--
extra : moz-landing-system : lando