dom/base/nsFocusManager.h
@@ -258,19 +258,21 @@ class nsFocusManager final : public nsIFocusManager,
   bool IsNonFocusableRoot(nsIContent* aContent);
 
   /**
-   * Checks and returns aContent if it may be focused, another content node if
+   * First flushes the pending notifications to ensure the PresShell and frames
+   * are updated.
+   * Checks and returns aElement if it may be focused, another element node if
    * the focus should be retargeted at another node, or null if the node
    * cannot be focused. aFlags are the flags passed to SetFocus and similar
    * methods.
    *
    * An element is focusable if it is in a document, the document isn't in
    * print preview mode and the element has an nsIFrame where the
-   * CheckIfFocusable method returns true. For <area> elements, there is no
+   * IsFocusable method returns true. For <area> elements, there is no
    * frame, so only the IsFocusable method on the content node must be
    * true.
    */
-  mozilla::dom::Element* CheckIfFocusable(mozilla::dom::Element* aContent,
-                                          uint32_t aFlags);
+  mozilla::dom::Element* FlushAndCheckIfFocusable(
+      mozilla::dom::Element* aElement, uint32_t aFlags);
 
   /**
    * Blurs the currently focused element. Returns false if another element was
